syntax = "proto3";

import "common/envelope.proto";

option java_multiple_files = true;
option java_package = "com.cell.grpc.cluster";
option java_outer_classname = "ClusterProto";


service BaseGrpc {
    rpc sendRequest (GrpcRequest) returns (GrpcResponse) {}
}

message GrpcRequest {
    common.Envelope envelope=1;
}

message GrpcResponse {
    string message = 1;
}


